--- a/style/links.css
+++ b/style/links.css
@@ -1,3 +1,4 @@
+/* Main Styling */
 :root {
   --bg-1: #313E50;
   --bg-2: #242d3a;
@@ -125,268 +126,6 @@ nav {
   color: rgba(0,0,0,.7);
 }
 
-/* Header */
-.hero {
-  width: 100%;
-  height: 80vh;
-  background: linear-gradient(135deg, #2293a4d7 0%, #26899dbb 100%), url("images/header-bg.jpg") center no-repeat;
-  background-size: cover;
-  position: relative;
-}
-
-.hero::before {
-  content: "";
-  position: absolute;
-  left: 0;
-  bottom: -3px;
-  width: 100%;
-  height: 4.7rem;
-  background: url("images/wave-small.png") center no-repeat;
-  background-size: cover;
-}
-
-.main-message {
-  width: 100%;
-  max-width: 50rem;
-  color: #fafafa;
-  text-transform: uppercase;
-  transform: translateY(20%);
-}
-
-.main-message h3 {
-  font-size: 1.6rem;
-}
-
-.main-message h1 {
-  font-family: 'Aldrich', sans-serif;
-  font-size: 4rem;
-  margin: 1rem 0;
-}
-
-.main-message p {
-  text-transform: initial;
-}
-
-/* .btn {
-  background-color: var(--ac-3);
-  border-radius: 2rem;
-  color: #fafafa;
-  display: inline-block;
-  margin-top: 2rem;
-  padding: 1rem 2.5rem;
-  text-transform: uppercase;
-  transition: background-color 650ms;
-} */
-
-.btn:hover {
-  background-color: var(--ac-4);
-}
-
-/* Experience */
-.experience-outdoors {
-  padding: 0;
-}
-
-.title-heading {
-  text-align: center;
-  text-transform: uppercase;
-  margin-bottom: 10rem;
-  color: rgba(0,0,0,.7);
-}
-
-.title-heading h3 {
-  font-size: 1.4rem;
-}
-
-.title-heading h1 {
-  font-family: 'Aldrich', sans-serif;
-  font-size: 2rem;
-  margin: .5rem 0 1rem;
-}
-
-.title-heading p {
-  text-transform: initial;
-}
-
-/* Footer */
-footer {
-  padding: 2.5rem 0;
-  /* background-color: #d7d4ed; */
-  background-color: var(--bg-4);
-  text-align: center;
-  color: rgba(0,0,0,.7);
-}
-
-/* Social buttons */
-.sennadevelopment-social {
-  padding: 10px;
-}
-
-.me {
-  background-image: url("images/logo.png");
-  background-size: cover;
-}
-.email {
-  background: var(--ac-3);
-  border-radius: 16px;
-  color: #fafafa;
-  height: 32px;
-  overflow: hidden;
-  position: relative;
-  width: 170px;
-  -webkit-tap-highlight-color: transparent;
-  transition: width 300ms cubic-bezier(0.4, 0.0, 0.2, 1),
-  height 300ms cubic-bezier(0.4, 0.0, 0.2, 1),
-  box-shadow 300ms cubic-bezier(0.4, 0.0, 0.2, 1),
-  border-radius 300ms cubic-bezier(0.4, 0.0, 0.2, 1);
-}
-.email:not(.expand) {
-  cursor: pointer;
-}
-.email:not(.expand):hover {
-  background: #C2C0C2;
-}
-.from {
-  position: absolute;
-  transition: opacity 200ms 100ms cubic-bezier(0.0, 0.0, 0.2, 1);
-}
-.from-contents {
-  display: flex;
-  flex-direction: row;
-  transform-origin: 0 0;
-  transition: transform 300ms cubic-bezier(0.4, 0.0, 0.2, 1);
-}
-.to {
-  opacity: 0;
-  position: absolute;
-  transition: opacity 100ms cubic-bezier(0.4, 0.0, 1, 1);
-}
-.to-contents {
-  transform: scale(.55);
-  transform-origin: 0 0;
-  transition: transform 300ms cubic-bezier(0.4, 0.0, 0.2, 1);
-}
-.avatar {
-  border-radius: 12px;
-  height: 24px;
-  left: 6px;
-  position: relative;
-  top: 4px;
-  width: 24px;
-}
-.name {
-  font-size: 14px;
-  line-height: 32px;
-  margin-left: 10px;
-}
-.top {
-  background: var(--ac-3);
-  display: flex;
-  flex-direction: row;
-  height: 70px;
-  transition: height 300ms cubic-bezier(0.4, 0.0, 0.2, 1);
-  width: 300px;
-}
-.avatar-large {
-  border-radius: 21px;
-  height: 42px;
-  margin-left: 12px;
-  position: relative;
-  top: 14px;
-  width: 42px;
-}
-.name-large {
-  color: #efd8ef;
-  font-size: 16px;
-  line-height: 70px;
-  margin-left: 20px;
-}
-.x-touch {
-  align-items: center;
-  align-self: center;
-  cursor: pointer;
-  display: flex;
-  height: 50px;
-  justify-content: center;
-  margin-left: auto;
-  width: 50px;
-}
-.x {
-  background: var(--ac-1);
-  border-radius: 10px;
-  height: 20px;
-  position: relative;
-  width: 20px;
-}
-.x-touch:hover .x {
-  background: var(--ac-2);
-}
-.line1 {
-  background: var(--bg-2);
-  height: 12px;
-  position: absolute;
-  transform: translateX(9px) translateY(4px) rotate(45deg);
-  width: 2px;
-}
-.line2 {
-  background: var(--bg-2);
-  height: 12px;
-  position: absolute;
-  transform: translateX(9px) translateY(4px) rotate(-45deg);
-  width: 2px;
-}
-.bottom {
-  background: #FFF;
-  color:  #444247;
-  font-size: 14px;
-  height: 200px;
-  padding-top: 5px;
-  width: 300px;
-}
-.row {
-  align-items: center;
-  display: flex;
-  flex-direction: row;
-  height: 60px;
-}
-.twitter {
-  margin-left: 16px;
-  height: 30px;
-  position: relative;
-  top: 0px;
-  width: 30px;
-}
-.link {
-  margin-left: 16px;
-}
-.link a {
-  color:  #444247;
-  text-decoration: none;
-}
-.link a:hover {
-  color:  #777579;
-}
-.email.expand {
-  border-radius: 6px;
-  box-shadow: 0 10px 20px rgba(0,0,0,0.10), 0 6px 6px rgba(0,0,0,0.16);
-  height: 140px;
-  width: 300px;
-}
-.expand .from {
-  opacity: 0;
-  transition: opacity 100ms cubic-bezier(0.4, 0.0, 1, 1);
-}
-.expand .from-contents {
-  transform: scale(1.91);
-}
-.expand .to {
-  opacity: 1;
-  transition: opacity 200ms 100ms cubic-bezier(0.0, 0.0, 0.2, 1);
-}
-.expand .to-contents {
-  transform: scale(1);
-}
-
 @media screen and (min-width: 700px) {
   header {
       height: 8rem;
@@ -442,42 +181,6 @@ footer {
 
   .nav-link:hover::before {
       transform: scaleX(1);
-  }
-
-  .hero {
-      height: 90vh;
-  }
-
-  .main-message {
-      transform: translateY(70%);
-  }
-
-  .title-heading h1 {
-      font-size: 2.5rem;
-  }
-}
-
-@media screen and (min-width: 950px) {
-  .hero::before{
-      height: 22.7rem;
-      background: url("images/wave-large.png");
-      background-size: cover;
-  }
-  
-  .testimonials::before{
-      height: 12vw;
-      background: url("images/wave-large-reversed.png");
-      background-size: cover;
-  }
-
-  .hero {
-      height: 100vh;
-  }
-}
-
-@media screen and (min-width: 1200px) {
-  .hero {
-      height: 100vh;
   }
 }
 
